429830: create New & Noteworthy for Mylyn 3.11
Change-Id: I739dbfbd53288fb79269a1c6bef83afaf3103d24
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=429830

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -132,7 +132,7 @@
 					allows one to search for text in the comments, description, summary,
 					and private notes.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/task-editor-find.png" />
 				</p>
 			</td>
 		</tr>
@@ -150,7 +150,7 @@
 			<td valign="top" width="85%">
 				<p align="left"><a href="#required-attributes">Required</a> attributes are decorated with an error icon if no value is specified.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/task-editor-required.png" />
 				</p>
 			</td>
 		</tr>
@@ -175,7 +175,7 @@
 					be shared with other users working on the same task. This is an experimental feature and must be enabled by users; see 
 					the <a href="https://wiki.eclipse.org/index.php?title=Mylyn/User_Guide#Breakpoints">known limitations</a>.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/context-breakpoints.png" />
 				</p>
 			</td>
 		</tr>
@@ -199,7 +199,7 @@
 				header for the task URL. The global template can be changed in the workspace preferences, and project-specific templates can 
 				be configured in the project properties.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/team-commit-message.png" />
 				</p>
 			</td>
 		</tr>
@@ -222,7 +222,7 @@
 				<p align="left">Similar to the Problems view, the Builds view shows the number of Succeeded, Unstable, and Failed builds in the view title and, when the 
 				view is minimized, in a tooltip.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/builds-status-summary.png" />
 				</p>
 			</td>
 		</tr>
@@ -244,7 +244,7 @@
 			<td valign="top" width="85%">
 				<p align="left">The compare editor has buttons to allow easy navigation to the next or previous comment.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/reviews-next-comment.png" />
 				</p>
 			</td>
 		</tr>
@@ -262,7 +262,7 @@
 			<td valign="top" width="85%">
 				<p align="left">Old and new versions of an image can be compared side by side.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/reviews-compare-images.png" />
 				</p>
 			</td>
 		</tr>
@@ -281,7 +281,7 @@
 				<p align="left">The new Gerrit Dashboard allows one to search for code reviews and view the approval state of all reviews matching 
 				the search criteria. The dashboard is a separate feature that can be optionally installed from the Mylyn update site.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/gerrit-dashboard.png" />
 				</p>
 			</td>
 		</tr>
@@ -300,7 +300,7 @@
 				<p align="left">As in the task editor, inline comments are now indicated with the person icon. Comments by the current user are highlighted with the yellow
 				person icon.</p>
 				<p>
-					<img border="0" src="images/3.11/.png" />
+					<img border="0" src="images/3.11/gerrit-comment-icon.png" />
 				</p>
 			</td>
 		</tr>
@@ -317,9 +317,6 @@
 			</td>
 			<td valign="top" width="85%">
 				<p align="left">Gerrit 2.8 is now supported.</p>
-				<p>
-					<img border="0" src="images/3.11/.png" />
-				</p>
 			</td>
 		</tr>
 	</table>
@@ -454,8 +451,8 @@
 					<b>Tasks: Support Repositories that Take No Credentials</b>
 				</p>
 			</td>
-			<td valign="top" width="85%">Connectors can call <tt>AbstractRepositorySettingsPage.setNeedsRepositoryCredentials(false)</tt> if they do not take credentials:
-				<p align="left">
+			<td valign="top" width="85%">
+				<p align="left">Connectors can call <tt>AbstractRepositorySettingsPage.setNeedsRepositoryCredentials(false)</tt> if they do not take credentials:
 					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=420877">bug
 						420877</a>.
 				</p>
