420019: [release] plan Mylyn 3.11 release
Change-Id: Ie489bc441c321cfb09dfc9097d8223ce5d7b06c6
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=420019

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,83 +1,31 @@
 <html>
 <body bgcolor="FFFFFF">
 
-	<table border="1" style="border-collapse: collapse" width="100%"
-		cellpadding="4" bordercolor="#FFFFFF">
-		<tr>
-			<td bgcolor="#595791" width="7%" align="center"><b> <font
-					color="#FFFFFF" size="1">Release</font></b></td>
-			<td bgcolor="#595791" width="5%" align="center"><b> <font
-					color="#FFFFFF" size="1">Resolved </font></b></td>
-			<td bgcolor="#595791" width="*" align="center"><b> <font
-					color="#FFFFFF" size="1">Community Contributions</font></b></td>
-		</tr>
-		<tr>
-			<td bgcolor="#E0D0E6"><font size="1">3.11<br> <i>March
-						26, 2014</i></font></td>
-			<td bgcolor="#E0D0E6" align="center"><a
-				href="https://projects.eclipse.org/projects/mylyn/releases/3.11/plan">
-					<font size="1">111</font><br> <font size="1">bugs</font>
-			</a></td>
-			<td bgcolor="#E0D0E6"><font size="1">Community
-					contributions were provided by Jeremie Bresson, Francois Chouinard,
-					Lily Guo, Carsten Hammer, David King, Endre Kovacs, Marc-Andre
-					Laperle, Guy Perron, Sebastian Schmidt, Stefan Seelmann.<br>Includes:
-					<a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.11">Mylyn
-						3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.3">Mylyn
-						Builds 1.3</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.11">Mylyn
-						Commons 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.11">Mylyn
-						Context 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.0">Mylyn
-						Docs 2.0</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.2">Mylyn
-						Reviews 2.2</a>. <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.11">Mylyn
-						Tasks 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.3">Mylyn
-						Versions 1.3</a>.
-			</font></td>
-		</tr>
-	</table>
+<h2>DRAFT</h2>
 
+<p><b>Also see the <a href="http://eclipse.org/mylyn/new/">New &amp; Noteworthy</a> for the latest release.</b></p> 
+
+<p><b>Updating</b>:&nbsp; If using a version prior to 2.0, upgrade to 2.0 before installing Mylyn 3.11.</p>
+
+<hr size="1"/>
+
+<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.11 Snapshot Builds</span></p>
+<!-- 
+<ul>
+	<li><a href="#task-editor">Task Editor</a></li>
+	<li><a href="#task-list">Task List</a></li>
+	<li><a href="#task-focused-interface">Task-Focused Interface</a></li>
+	<li><a href="#wikitext">WikiText</a></li>
+	<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+	<li><a href="#bugzilla">Bugzilla Connector</a></li>
+	<li><a href="#trac">Trac Connector</a></li>
+	<li><a href="#gerrit">Gerrit Connector</a></li>
+	<li><a href="#framework">Framework and API</a></li>
+</ul>
+ -->
+ 
 	<p>
-		<b>Also see the New &amp; Noteworthy for: <a
-			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.9.html">Mylyn 3.9</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.8.html">Mylyn 3.8</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.6.html">Mylyn 3.6</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.4.html">Mylyn 3.4</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.2.html">Mylyn 3.2</a>, <a
-			href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, <a
-			href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, <a
-			href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.5.html">Mylyn 0.5</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a
-			href="http://eclipse.org/mylyn/new/new-0.3.html">Mylyn 0.3</a></b>
-	</p>
-
-	<hr size="1" />
-
-	<p>
-		<span style="font-weight: 700; background-color: #E0D0E6">New
-			in Mylyn 3.11</span>
-	</p>
-
-	<ul>
-		<li><a href="#task-list">Task List</a></li>
-		<li><a href="#task-editor">Task Editor</a></li>
-		<li><a href="#context">Context</a></li>
-		<li><a href="#team">Team</a></li>
-		<li><a href="#gerrit">Gerrit Connector</a></li>
-		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
-		<li><a href="#framework">Framework and API</a></li>
-	</ul>
-
-	<p>
-		<b>NOTE:</b> Mylyn 3.11 requires <a
+		<b>NOTE:</b> Mylyn 3.10 requires <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907"
 			target="_new"><b>Java 1.6 or later</b></a> and supports <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=412708"
@@ -89,398 +37,27 @@
 	</p>
 	<hr size="1" />
 
+<hr size="1"/>
 
-	<p>&nbsp;</p>
-	<h2>
-		<a name="task-list">Task List</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Task Ownership More Prominent</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Task List makes it easier to see which tasks
-					are assigned to you. First, the tooltip decorates tasks 
-					with the familiar yellow person icon if they are assigned to you, and second, a "Show only my
-					tasks" filter button has been added to the Task List toolbar.</p>
-				<p>
-					<img border="0" src="images/3.11/task-list-assigned.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="task-editor">Task Editor</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Find Text</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Task Editor toolbar has a find button that
-					allows one to search for text in the comments, description, summary,
-					and private notes.</p>
-				<p>
-					<img border="0" src="images/3.11/task-editor-find.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Decorate Required Attributes</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left"><a href="#required-attributes">Required</a> attributes are decorated with an error icon if no value is specified.</p>
-				<p>
-					<img border="0" src="images/3.11/task-editor-required.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="context">Context</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Include Breakpoints in Task Context</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">On task deactivation, Mylyn removes all breakpoints and stores them in
-					the task context, preventing the accumulation of a huge set of breakpoints. This valuable task-specific information can also
-					be shared with other users working on the same task. This is an experimental feature and must be enabled by users; see 
-					the <a href="https://wiki.eclipse.org/index.php?title=Mylyn/User_Guide#Breakpoints">known limitations</a>.</p>
-				<p>
-					<img border="0" src="images/3.11/context-breakpoints.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="team">Team</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Default Commit Comment Template</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The default commit comment template has been simplified by removing the task status. It also uses a Git style 
-				header for the task URL. The global template can be changed in the workspace preferences, and project-specific templates can 
-				be configured in the project properties.</p>
-				<p>
-					<img border="0" src="images/3.11/team-commit-message.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="hudson">Hudson/Jenkins Connector</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Builds Status Summary</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Similar to the Problems view, the Builds view shows the number of Succeeded, Unstable, and Failed builds in the view title and, when the 
-				view is minimized, in a tooltip.</p>
-				<p>
-					<img border="0" src="images/3.11/builds-status-summary.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="gerrit">Gerrit Connector</a>
-	</h2>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Comment Navigation</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The compare editor has buttons to allow easy navigation to the next or previous comment.</p>
-				<p>
-					<img border="0" src="images/3.11/reviews-next-comment.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Compare Images</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Old and new versions of an image can be compared side by side.</p>
-				<p>
-					<img border="0" src="images/3.11/reviews-compare-images.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Code Review Dashboard</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The new Gerrit Dashboard allows one to search for code reviews and view the approval state of all reviews matching 
-				the search criteria. The dashboard is a separate feature that can be optionally installed from the Mylyn update site.</p>
-				<p>
-					<img border="0" src="images/3.11/gerrit-dashboard.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Changed Comment Icon</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">As in the task editor, inline comments are now indicated with the person icon. Comments by the current user are highlighted with the yellow
-				person icon.</p>
-				<p>
-					<img border="0" src="images/3.11/gerrit-comment-icon.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Gerrit 2.8 </b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Gerrit 2.8 is now supported.</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="framework">Framework and API</a>
-	</h2>
-
-	<p>
-		See <a
-			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.11"
-			target="_new">porting guide</a> for additional notes on API changes.
-	</p>
-
-	<table cellpadding="10" cellspacing="0" width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Tasks: Secure Storage</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Task repository credentials are always stored in the Eclipse secure storage instead of the keyring:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278474">bug
-						278474</a>
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Tasks: Access Unsubmitted TaskData</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left"><tt>TaskJobListener</tt>s can access changed <tt>TaskData</tt> before it is submitted:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=390529">bug
-						390529</a>
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Tasks: Core API to Validate Repositories</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can implement <tt>AbstractRepositoryConnector.validateRepository()</tt> to validate a repository connection and determine 
-				the repository version:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=425458">bug
-						425458</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b><a name="required-attributes">Tasks: Indicate Required Attributes</a>
-					</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can indicate required attributes by setting <tt>TaskAttribute.META_REQUIRED</tt> flag:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=378032">bug
-						378032</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Tasks: Per-Attribute Markup Languages</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					Task attributes that specify a media type using the metadata key
-					<tt>TaskAttribute.META_ATTRIBUTE_MEDIA_TYPE</tt>
-					are displayed using the corresponding markup viewer.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>OSLC Connector Removed</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The OSLC connector has been removed:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=421071">bug
-						421071</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Tasks: Support Repositories that Take No Credentials</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can call <tt>AbstractRepositorySettingsPage.setNeedsRepositoryCredentials(false)</tt> if they do not take credentials:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=420877">bug
-						420877</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
-				<p align="right">
-					<b>Wikitext: Fewer Dependencies</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					To make it easier to consume WikiText in non-OSGi contexts, Eclipse
-					runtime dependencies have been moved from the wikitext core bundle
-					to a new bundle,
-					<tt>org.eclipse.mylyn.wikitext.core.osgi</tt>. The dependency on Ant has also been moved to its own bundle,
-					<tt>org.eclipse.mylyn.wikitext.core.ant</tt>. <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=419621">bug
-						419621</a>.
-				</p>
-			</td>
-		</tr>
-	</table>
-
+No builds have been published, yet. Stay tuned.
+<!-- 
+<table cellpadding="10" cellspacing="0" width="100%">
+	<tr>
+		<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+		<p align="right"><b>...</b></p>
+		</td>
+		<td valign="top" width="85%">
+		<p align="left">...</p>
+		<p><img border="0" src="images/3.8/...png"></p>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+		<hr size="1"/>
+		</td>
+	</tr>
+</table>
+ -->
+ 
 </body>
 </html>
