--- a/new/new.html
+++ b/new/new.html
@@ -12,13 +12,13 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
-			<td bgcolor="#E0D0E6"><font size="1">3.11<br> <i>March
+			<td bgcolor="#EFEFEF"><font size="1">3.11<br> <i>March
 						26, 2014</i></font></td>
-			<td bgcolor="#E0D0E6" align="center"><a
+			<td bgcolor="#EFEFEF" align="center"><a
 				href="https://projects.eclipse.org/projects/mylyn/releases/3.11/plan">
 					<font size="1">111</font><br> <font size="1">bugs</font>
 			</a></td>
-			<td bgcolor="#E0D0E6"><font size="1">Community
+			<td bgcolor="#EFEFEF"><font size="1">Community
 					contributions were provided by Jeremie Bresson, Francois Chouinard,
 					Lily Guo, Carsten Hammer, David King, Endre Kovacs, Marc-Andre
 					Laperle, Guy Perron, Sebastian Schmidt, Stefan Seelmann.<br>Includes:
@@ -62,8 +62,7 @@
 	<hr size="1" />
 
 	<p>
-		<span style="font-weight: 700; background-color: #E0D0E6">New
-			in Mylyn 3.11</span>
+		<h1>New	in Mylyn 3.11</h1>
 	</p>
 
 	<ul>
@@ -95,9 +94,9 @@
 		<a name="task-list">Task List</a>
 	</h2>
 
-	<table cellpadding="10" cellspacing="0" width="100%">
+	<table cellpadding="10" cellspacing="10" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Task Ownership More Prominent</b>
 				</p>
@@ -122,7 +121,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Find Text</b>
 				</p>
@@ -142,7 +141,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Decorate Required Attributes</b>
 				</p>
@@ -164,7 +163,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Include Breakpoints in Task Context</b>
 				</p>
@@ -189,7 +188,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Default Commit Comment Template</b>
 				</p>
@@ -213,7 +212,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Builds Status Summary</b>
 				</p>
@@ -236,7 +235,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Comment Navigation</b>
 				</p>
@@ -254,7 +253,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Compare Images</b>
 				</p>
@@ -272,7 +271,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Code Review Dashboard</b>
 				</p>
@@ -291,7 +290,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Changed Comment Icon</b>
 				</p>
@@ -310,7 +309,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Gerrit 2.8 </b>
 				</p>
@@ -335,7 +334,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Tasks: Secure Storage</b>
 				</p>
@@ -353,7 +352,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Tasks: Access Unsubmitted TaskData</b>
 				</p>
@@ -371,7 +370,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Tasks: Core API to Validate Repositories</b>
 				</p>
@@ -390,7 +389,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b><a name="required-attributes">Tasks: Indicate Required Attributes</a>
 					</b>
@@ -409,7 +408,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Tasks: Per-Attribute Markup Languages</b>
 				</p>
@@ -428,7 +427,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>OSLC Connector Removed</b>
 				</p>
@@ -446,7 +445,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Tasks: Support Repositories that Take No Credentials</b>
 				</p>
@@ -464,7 +463,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#E0D0E6">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;">
 				<p align="right">
 					<b>Wikitext: Fewer Dependencies</b>
 				</p>
