434241: update Mylyn website to support Solstice theme
Change-Id: Ic102074bec23231695afd6883da45acae704a39d
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=434241

--- a/new/new.html
+++ b/new/new.html
@@ -96,7 +96,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Task Ownership More Prominent</b>
 				</p>
@@ -121,7 +121,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Find Text</b>
 				</p>
@@ -141,7 +141,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Decorate Required Attributes</b>
 				</p>
@@ -163,7 +163,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Include Breakpoints in Task Context</b>
 				</p>
@@ -188,7 +188,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Default Commit Comment Template</b>
 				</p>
@@ -212,7 +212,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Builds Status Summary</b>
 				</p>
@@ -235,7 +235,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Comment Navigation</b>
 				</p>
@@ -253,7 +253,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Compare Images</b>
 				</p>
@@ -271,7 +271,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Code Review Dashboard</b>
 				</p>
@@ -290,7 +290,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Changed Comment Icon</b>
 				</p>
@@ -309,7 +309,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Gerrit 2.8 </b>
 				</p>
@@ -334,7 +334,7 @@
 
 	<table cellpadding="10" cellspacing="0" width="100%">
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Tasks: Secure Storage</b>
 				</p>
@@ -352,7 +352,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Tasks: Access Unsubmitted TaskData</b>
 				</p>
@@ -370,7 +370,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Tasks: Core API to Validate Repositories</b>
 				</p>
@@ -389,7 +389,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b><a name="required-attributes"></a>Tasks: Indicate Required Attributes
 					</b>
@@ -408,7 +408,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Tasks: Per-Attribute Markup Languages</b>
 				</p>
@@ -427,7 +427,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>OSLC Connector Removed</b>
 				</p>
@@ -445,7 +445,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Tasks: Support Repositories that Take No Credentials</b>
 				</p>
@@ -463,7 +463,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px; border-spacing:5px 0px;">
 				<p align="right">
 					<b>Wikitext: Fewer Dependencies</b>
 				</p>
