--- a/new/new.html
+++ b/new/new.html
@@ -94,7 +94,7 @@
 		<a name="task-list">Task List</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
 				<p align="right">
@@ -119,7 +119,7 @@
 		<a name="task-editor">Task Editor</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
 				<p align="right">
@@ -161,7 +161,7 @@
 		<a name="context">Context</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
@@ -186,7 +186,7 @@
 		<a name="team">Team</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
@@ -210,7 +210,7 @@
 		<a name="hudson">Hudson/Jenkins Connector</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
@@ -233,7 +233,7 @@
 		<a name="gerrit">Gerrit Connector</a>
 	</h2>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
@@ -332,7 +332,7 @@
 			target="_new">porting guide</a> for additional notes on API changes.
 	</p>
 
-	<table cellpadding="10" style="border-spacing: 5px 0px;"width="100%">
+	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
