434241: update weekly n&n to support Solstice theme
Change-Id: I2239190ceddbb7fa3da9064eb076236adc905b22
Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=434241

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -9,7 +9,7 @@
 
 <hr size="1"/>
 
-<p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.11 Snapshot Builds</span></p>
+<h1>New in Mylyn 3.11 Snapshot Builds</h1>
 <!-- 
 <ul>
 	<li><a href="#task-editor">Task Editor</a></li>
