--- a/new/new.html
+++ b/new/new.html
@@ -12,39 +12,39 @@
 					color="#FFFFFF" size="1">Community Contributions</font></b></td>
 		</tr>
 		<tr>
-			<td bgcolor="#EFEFEF"><font size="1">3.11<br> <i>March
-						26, 2014</i></font></td>
+			<td bgcolor="#EFEFEF"><font size="1">3.12<br> <i>June
+						25, 2014</i></font></td>
 			<td bgcolor="#EFEFEF" align="center"><a
-				href="https://projects.eclipse.org/projects/mylyn/releases/3.11/plan">
-					<font size="1">111</font><br> <font size="1">bugs</font>
+				href="https://projects.eclipse.org/projects/mylyn/releases/3.12/plan">
+					<font size="1">49</font><br> <font size="1">bugs</font>
 			</a></td>
 			<td bgcolor="#EFEFEF"><font size="1">Community
-					contributions were provided by Jeremie Bresson, Francois Chouinard,
-					Lily Guo, Carsten Hammer, David King, Endre Kovacs, Marc-Andre
-					Laperle, Guy Perron, Sebastian Schmidt, Stefan Seelmann.<br>Includes:
+					contributions were provided by Gregory Amerson, Tim Cheung, Leo Dos Santos, James Kennedy, and Michael Keppler.
+					<br>Includes:
 					<a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.11">Mylyn
-						3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.3">Mylyn
-						Builds 1.3</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.11">Mylyn
-						Commons 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.11">Mylyn
-						Context 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.0">Mylyn
-						Docs 2.0</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.2">Mylyn
-						Reviews 2.2</a>. <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.11">Mylyn
-						Tasks 3.11</a>, <a
-					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.3">Mylyn
-						Versions 1.3</a>.
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn;target_milestone=3.12">Mylyn
+						3.12</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Builds;target_milestone=1.4">Mylyn
+						Builds 1.4</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Commons;target_milestone=3.12">Mylyn
+						Commons 3.12</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Context;target_milestone=3.12">Mylyn
+						Context 3.12</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Docs;target_milestone=2.1">Mylyn
+						Docs 2.1</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Reviews;target_milestone=2.3">Mylyn
+						Reviews 2.3</a>. <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Tasks;target_milestone=3.12">Mylyn
+						Tasks 3.12</a>, <a
+					href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced;product=Mylyn%20Versions;target_milestone=1.4">Mylyn
+						Versions 1.4</a>.
 			</font></td>
 		</tr>
 	</table>
 
 	<p>
 		<b>Also see the New &amp; Noteworthy for: <a
+			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.9.html">Mylyn 3.9</a>, <a
 			href="http://eclipse.org/mylyn/new/new-3.8.html">Mylyn 3.8</a>, <a
@@ -62,21 +62,18 @@
 	<hr size="1" />
 
 	<p>
-		<h1>New	in Mylyn 3.11</h1>
+		<h1>New	in Mylyn 3.12</h1>
 	</p>
 
 	<ul>
-		<li><a href="#task-list">Task List</a></li>
-		<li><a href="#task-editor">Task Editor</a></li>
 		<li><a href="#context">Context</a></li>
-		<li><a href="#team">Team</a></li>
-		<li><a href="#gerrit">Gerrit Connector</a></li>
 		<li><a href="#hudson">Hudson/Jenkins Connector</a></li>
+		<li><a href="#gerrit">Gerrit Connector</a></li>
 		<li><a href="#framework">Framework and API</a></li>
 	</ul>
 
 	<p>
-		<b>NOTE:</b> Mylyn 3.11 requires <a
+		<b>NOTE:</b> Mylyn 3.12 requires <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=383907"
 			target="_new"><b>Java 1.6 or later</b></a> and supports <a
 			href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=412708"
@@ -89,71 +86,6 @@
 	<hr size="1" />
 
 
-	<p>&nbsp;</p>
-	<h2>
-		<a name="task-list">Task List</a>
-	</h2>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
-				<p align="right">
-					<b>Task Ownership More Prominent</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Task List makes it easier to see which tasks
-					are assigned to you. First, the tooltip decorates tasks 
-					with the familiar yellow person icon if they are assigned to you, and second, a "Show only my
-					tasks" filter button has been added to the Task List toolbar.</p>
-				<p>
-					<img border="0" src="images/3.11/task-list-assigned.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="task-editor">Task Editor</a>
-	</h2>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white; padding-right: 5px;">
-				<p align="right">
-					<b>Find Text</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The Task Editor toolbar has a find button that
-					allows one to search for text in the comments, description, summary,
-					and private notes.</p>
-				<p>
-					<img border="0" src="images/3.11/task-editor-find.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Decorate Required Attributes</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left"><a href="#required-attributes">Required</a> attributes are decorated with an error icon if no value is specified.</p>
-				<p>
-					<img border="0" src="images/3.11/task-editor-required.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
 
 
 	<p>&nbsp;</p>
@@ -165,41 +97,13 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Include Breakpoints in Task Context</b>
+					<b>Toggle Focus Active View with Keyboard</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">On task deactivation, Mylyn removes all breakpoints and stores them in
-					the task context, preventing the accumulation of a huge set of breakpoints. This valuable task-specific information can also
-					be shared with other users working on the same task. This is an experimental feature and must be enabled by users; see 
-					the <a href="https://wiki.eclipse.org/index.php?title=Mylyn/User_Guide#Breakpoints">known limitations</a>.</p>
-				<p>
-					<img border="0" src="images/3.11/context-breakpoints.png" />
-				</p>
-			</td>
-		</tr>
-	</table>
-
-
-	<p>&nbsp;</p>
-	<h2>
-		<a name="team">Team</a>
-	</h2>
-
-	<table cellpadding="10" style="border-spacing: 5px 0px; border-collapse: separate;"width="100%">
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Default Commit Comment Template</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The default commit comment template has been simplified by removing the task status. It also uses a Git style 
-				header for the task URL. The global template can be changed in the workspace preferences, and project-specific templates can 
-				be configured in the project properties.</p>
-				<p>
-					<img border="0" src="images/3.11/team-commit-message.png" />
-				</p>
+				<p align="left">You can quickly focus or unfocus the active view
+					by pressing Alt+Shift+H. The keybinding can be customized in the
+					preferences.</p>
 			</td>
 		</tr>
 	</table>
@@ -214,15 +118,11 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Builds Status Summary</b>
+					<b>Jenkins 1.532.2</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">Similar to the Problems view, the Builds view shows the number of Succeeded, Unstable, and Failed builds in the view title and, when the 
-				view is minimized, in a tooltip.</p>
-				<p>
-					<img border="0" src="images/3.11/builds-status-summary.png" />
-				</p>
+				<p align="left">Jenkins 1.532.2 is now supported.</p>
 			</td>
 		</tr>
 	</table>
@@ -237,13 +137,14 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Comment Navigation</b>
+					<b>Open Review Navigator from Task Editor</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">The compare editor has buttons to allow easy navigation to the next or previous comment.</p>
+				<p align="left">The Gerrit task editor adds a toolbar button to
+					make it easy open the Review Navigator for the current review.
 				<p>
-					<img border="0" src="images/3.11/reviews-next-comment.png" />
+					<img border="0" src="images/3.12/reviews-navigator.png" />
 				</p>
 			</td>
 		</tr>
@@ -255,67 +156,11 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Compare Images</b>
+					<b>Gerrit 2.8.5</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">Old and new versions of an image can be compared side by side.</p>
-				<p>
-					<img border="0" src="images/3.11/reviews-compare-images.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Code Review Dashboard</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The new Gerrit Dashboard allows one to search for code reviews and view the approval state of all reviews matching 
-				the search criteria. The dashboard is a separate feature that can be optionally installed from the Mylyn update site.</p>
-				<p>
-					<img border="0" src="images/3.11/gerrit-dashboard.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Changed Comment Icon</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">As in the task editor, inline comments are now indicated with the person icon. Comments by the current user are highlighted with the yellow
-				person icon.</p>
-				<p>
-					<img border="0" src="images/3.11/gerrit-comment-icon.png" />
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Gerrit 2.8 </b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Gerrit 2.8 is now supported.</p>
+				<p align="left">Gerrit 2.8.5 is now supported.</p>
 			</td>
 		</tr>
 	</table>
@@ -328,7 +173,7 @@
 
 	<p>
 		See <a
-			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.11"
+			href="https://wiki.eclipse.org/Mylyn/Porting_Guide#Changes_in_3.12"
 			target="_new">porting guide</a> for additional notes on API changes.
 	</p>
 
@@ -336,13 +181,15 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Tasks: Secure Storage</b>
+					<b>Tasks: Control Fetching of Subtasks</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
-				<p align="left">Task repository credentials are always stored in the Eclipse secure storage instead of the keyring:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=278474">bug
-						278474</a>
+				<p align="left">To allow clients of the framework to control whether queries automatically fetch subtasks,
+				<tt>SynchronizationJob</tt> and <tt>ITaskJobFactory</tt> now have 
+				<tt>setFetchSubtasks</tt> and <tt>getFetchSubtasks</tt> methods.
+					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=385670">bug
+						385670</a>
 				</p>
 			</td>
 		</tr>
@@ -354,132 +201,27 @@
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
 				<p align="right">
-					<b>Tasks: Access Unsubmitted TaskData</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left"><tt>TaskJobListener</tt>s can access changed <tt>TaskData</tt> before it is submitted:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=390529">bug
-						390529</a>
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Tasks: Core API to Validate Repositories</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can implement <tt>AbstractRepositoryConnector.validateRepository()</tt> to validate a repository connection and determine 
-				the repository version:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=425458">bug
-						425458</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b><a name="required-attributes"></a>Tasks: Indicate Required Attributes
-					</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can indicate required attributes by setting <tt>TaskAttribute.META_REQUIRED</tt> flag:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=378032">bug
-						378032</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Tasks: Per-Attribute Markup Languages</b>
+					<b>Commons: Configure Maximum Number of Connections</b>
 				</p>
 			</td>
 			<td valign="top" width="85%">
 				<p align="left">
-					Task attributes that specify a media type using the metadata key
-					<tt>TaskAttribute.META_ATTRIBUTE_MEDIA_TYPE</tt>
-					are displayed using the corresponding markup viewer.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>OSLC Connector Removed</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">The OSLC connector has been removed:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=421071">bug
-						421071</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Tasks: Support Repositories that Take No Credentials</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">Connectors can call <tt>AbstractRepositorySettingsPage.setNeedsRepositoryCredentials(false)</tt> if they do not take credentials:
-					<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=420877">bug
-						420877</a>.
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td colspan="2">
-				<hr size="1" />
-			</td>
-		</tr>
-		<tr>
-			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
-				<p align="right">
-					<b>Wikitext: Fewer Dependencies</b>
-				</p>
-			</td>
-			<td valign="top" width="85%">
-				<p align="left">
-					To make it easier to consume WikiText in non-OSGi contexts, Eclipse
-					runtime dependencies have been moved from the wikitext core bundle
-					to a new bundle,
-					<tt>org.eclipse.mylyn.wikitext.core.osgi</tt>. The dependency on Ant has also been moved to its own bundle,
-					<tt>org.eclipse.mylyn.wikitext.core.ant</tt>. <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=419621">bug
-						419621</a>.
+					Clients can configure the maximum
+					number of http connections (in total and per-host) 
+					using <a href="https://wiki.eclipse.org/Mylyn/FAQ#System_Properties">system properties</a>.
+					<a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=417451">bug
+						417451</a>
 				</p>
 			</td>
 		</tr>
 	</table>
+	
+	<h1>New in Eclipse Luna</h1>
+	
+	For Mylyn changes since the Eclipse Kepler/Mylyn 3.9 release, see also the New &amp; Noteworthy for <a
+			href="http://eclipse.org/mylyn/new/new-3.11.html">Mylyn 3.11</a> and <a
+			href="http://eclipse.org/mylyn/new/new-3.10.html">Mylyn 3.10</a>.
 
 </body>
 </html>
