--- a/new/new.html
+++ b/new/new.html
@@ -215,6 +215,26 @@
 				</p>
 			</td>
 		</tr>
+		<tr>
+			<td colspan="2">
+				<hr size="1" />
+			</td>
+		</tr>
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor="#3D355C" style="color:white;  padding-right: 5px;">
+				<p align="right">
+					<b>SOAP transport removed</b>
+				</p>
+			</td>
+			<td valign="top" width="85%">
+				<p align="left">
+					The SOAP transport has been removed: 
+					<a
+						href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=421379">bug
+						421379</a>
+				</p>
+			</td>
+		</tr>
 	</table>
 	
 	<h1>New in Eclipse Luna</h1>
